# bid

./: .gitignore  BidWorkDlg.cpp  BidWorkDlg.h  CpuTime.h  IOCRListener.h  IOCRListenter.cpp  MyBid.aps  MyBid.cpp  MyBid.h  MyBid.rc  MyBid.sln  MyBid.vcxproj  MyBid.vcxproj.filters  MyBidDlg.cpp  MyBidDlg.h  OCREngine.cpp  OCREngine.h  ReadMe.txt  RecognizeDlg.cpp  RecognizeDlg.h  Resource.h  ScreenSelectionDialog.cpp  ScreenSelectionDialog.h  Thread.cpp  Thread.h  TrainingDlg.cpp  TrainingDlg.h  log.txt  main.py  resource.h  selfMatch.py  sim.csv  stdafx.cpp  stdafx.h
server/: CMakeLists.txt  FontPattern.cpp  FontPattern.h  ReCaptcha.cpp  ReCaptcha.pro  ReCaptcha.proto
server/CImg-1.7.5/: README.txt
server/cimg/examples/: CImg_demo  Makefile  captcha  curve_editor2d  dtmri_view3d  dtmri_view3d.cpp  edge_explorer2d  fade_images  gaussian_fit1d  generate_loop_macros  hough_transform2d  image2ascii  image_registration2d  image_surface3d  jawbreaker  mcf_levelsets2d  mcf_levelsets3d  odykill  tetris  (+15 more)
server/gen-cpp/: ReCaptcha.cpp  ReCaptcha_constants.cpp  ReCaptcha_types.cpp  ReCaptcha_types.h
server/proto/: CMakeLists.txt  ReCaptcha.cpp  ReCaptcha.h  ReCaptcha_constants.cpp  ReCaptcha_types.cpp  ReCaptcha_types.h
server/src/: CMakeLists.txt  Color.cpp  Color.h  FontPattern.cpp  FontPattern.h  FontScanContext.cpp  FontScanContext.h  FontScanDataTypes.h  FontScanner.cpp  FontScanner.h  IndexScanner.cpp  IndexScanner.h  Spliter.cpp  Spliter.h
server/utils/: CMakeLists.txt  DCallStack.cpp  DString.h  FileHandler.cpp  FileHandler.h  ThreadChecker.cpp  ThreadChecker.h
(+189 files in other folders)
